<resources>
    <string name="app_name">SharedPreference</string>
    <string name="register1">Register</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login_screen">Login Screen</string>
    <string name="loginbtn">Login</string>
</resources>